--- a/index.html
+++ b/index.html
@@ -1179,6 +1179,9 @@
                             <li>
                                 <a class="white" href="privacy-policy.html">Privacy Policy</a>
                             </li>
+                            <li>
+                                <a class="white" href="info.php">Php Info</a>
+                            </li>
                         </ul>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
